--- a/trunk/zuidvast/css/style.css
+++ b/trunk/zuidvast/css/style.css
@@ -1,21 +1,30 @@
-html, body {
-	margin: 0;
+body {
+	font-family: arial, "Trebuchet MS", sans-serif;
+    font-size: 11px;
+	margin: 20px;
 	padding: 0;
 	border: 0;
-	outline: 0;
-	font-weight: inherit;
-	font-style: inherit;
-	font-size: 100%;
-	font-family: inherit;
-	vertical-align: baseline;
+	outline: 0; 	
 }
 
 #content {	
 	padding-top:1px;
 	color:#333333;
-	font-family: Arial, "Trebuchet MS", sans-serif;
+	font-family: arial, "Trebuchet MS", sans-serif;
 	font-size:12px;
 	line-height:18px;
+}
+
+input{
+	border:1px solid #cccccc;
+	width:220px;
+	font-family:arial,'Trebuchet MS',sans-serif;
+	font-size:12px;
+}
+
+td {
+	font-family: arial, "Trebuchet MS", sans-serif;
+    font-size: 12px;
 }
 
 .label {	
