--- a/trunk/bijna2009/css/style.css
+++ b/trunk/bijna2009/css/style.css
@@ -11,7 +11,17 @@
 		font-family:Arial;
 		font-size:12px;
 	}
-
+	
+	input, textarea {
+		margin:0px 5px 5px 5px;
+		width:200px;
+		border:3px solid #cccccc;
+		background-color:#efefef;
+		color:black;
+		font-size:12px;
+		font: 12px "Courier New", Courier, Sans-Serif;
+	}
+	
 	/* Header styles */
 	#header {
 		clear:both;
@@ -19,7 +29,7 @@
 		width:100%;
 	}
 	#header {
-		border-bottom:1px solid #000;
+		/*border-bottom:1px solid #000;*/
 	}
 
 	/* column container */
@@ -47,7 +57,7 @@
 	}
 	/* 2 Column (double page) settings */
 	.doublepage {
-		background:#eee;		/* right column background colour */
+		background:#fff;		/* right column background colour */
 	}
 	.doublepage .colleft {
 		right:50%;			/* right column width */
@@ -66,7 +76,7 @@
 		clear:both;
 		float:left;
 		width:100%;
-		border-top:1px solid #000;
+		/*border-top:1px solid #000;*/
 	}
 	#footer p {
 		padding:10px;
